# Instructor-Assistant

./: .gitignore  APPLICATION_READY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INTEGRATION_COMPLETE.md  MIGRATION_GUIDE.md  Modularization.md  PGVECTOR_IMPLEMENTATION_SUMMARY.md  PORT_FIX.md  QUICK_START.md  README.md  SEARCH_AND_NAVIGATE_FEATURE.md  SEARCH_DOCUMENTATION.md  TESTING_CHECKLIST.md  TESTING_RESULTS.md  TESTING_SUMMARY.md  install_deps.sh  package-lock.json  package.json  start.sh  vite.config.ts
backend/: .env.example  agent.py  (+7 more)
modules/phase1-python/: README.md  pyproject.toml  requirements.txt
modules/phase1-python/examples/: example_search_pipeline.py
modules/phase1-python/features/chunking/: README.md
modules/phase1-python/features/equations/: README.md  requirements.txt
modules/phase1-python/features/figures/: README.md
modules/phase1-python/features/markdown_export/: README.md
modules/phase1-python/features/parser/: README.md  requirements.txt
modules/phase1-python/features/search/: README.md
modules/phase1-python/features/section_overview/: README.md
modules/phase1-python/features/sectioning/: README.md
modules/phase1-python/features/tables/: README.md
modules/phase1-python/tests/: README.md  conftest.py  test_chunking.py  test_contract_integration.py  test_equations.py  test_figures.py  test_markdown_export.py  test_parser.py  test_search_context.py  test_search_hybrid.py  test_search_keyword.py  test_search_pipeline.py  test_section_overview.py  test_sectioning.py  test_tables.py  test_youtube_transcript.py
(+690 files in other folders)
