[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ia-phase1"
version = "0.1.0"
description = "Reusable PDF ingestion modules: parser, sectioning, chunking, tables, and figures."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "httpx>=0.27.0",
  "pypdf>=4.2.0",
  "PyMuPDF>=1.24.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
parser = [
  "beautifulsoup4>=4.12.0",
  "httpx>=0.27.0",
  "pypdf>=4.2.0",
  "PyMuPDF>=1.24.0",
]
sectioning = [
  "PyMuPDF>=1.24.0",
  "requests>=2.31.0",
]
chunking = []
tables = [
  "PyMuPDF>=1.24.0",
]
figures = [
  "PyMuPDF>=1.24.0",
]
all = [
  "beautifulsoup4>=4.12.0",
  "httpx>=0.27.0",
  "pypdf>=4.2.0",
  "PyMuPDF>=1.24.0",
  "requests>=2.31.0",
]
test = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "integration: marks slow/integration tests that may depend on local services",
]
